- Bugfix for NPE in PeriodModel - Bugfix for Copy and Paste bug with DBConnector - Added support for mariadb driver